# xformat

./: .bazelrc  .gitignore  BUILD  Makefile  README.md  WORKSPACE  go.mod  go_dependencies.bzl  variables.bzl
cmd/: BUILD  main.go
image/: BUILD
internal/: BUILD.bazel  filewalker.go  filewalker_test.go  matcher.go  matcher_test.go  tree_test.go
src/main/clojure/: BUILD  cljfmt-shim.clj  cljfmt_shim.clj
src/main/java/xformat/: ArgumentParser.java  BUILD  ClojureFormatter.java  ExternalFormatter.java  FileWalker.java  Format.java  JavaFormatter.java  Matchers.java  XFormatter.java
src/test/java/xformat/: BUILD  FileWalkerTest.java  MatcherTest.java  XFormatSuite.java
test/container/: BUILD  test_workload.sh
test/data/: BUILD
test/data/formatted/clojure/: program.clj  transform.clj
test/data/formatted/dhall/: a.dhall
test/data/formatted/go/: hello.go
test/data/formatted/java/: Hello.java
test/data/formatted/json/: b.json
test/data/formatted/proto/: test.proto
test/data/formatted/sh/: print.sh
test/data/formatted/ts/: utils.ts
test/data/formatted/yaml/: envoy.yaml
test/data/unformatted/clojure/: program.clj  transform.clj
test/data/unformatted/cpp/: hello.cpp
test/data/unformatted/dhall/: a.dhall
test/data/unformatted/go/: hello.go
test/data/unformatted/java/: Hello.java
test/data/unformatted/json/: b.json
test/data/unformatted/proto/: test.proto
test/data/unformatted/python/: hello.py
test/data/unformatted/sh/: print.sh
test/data/unformatted/ts/: program.ts
test/data/unformatted/yaml/: envoy.yaml
