load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filewalker.go",
        "matcher.go",
    ],
    importpath = "github.com/humphrej/xformat/internal",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_golang_glog//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filewalker_test.go",
        "matcher_test.go",
        "tree_test.go",
    ],
    embed = [":go_default_library"],
)
